<resources>
    <string name="app_name">DoorDash</string>
    <string name="try_again">Try Again</string>
    <string name="empty_list">Nothing to show yet</string>
    <string name="err_ui_message">Snap! Something went wrong</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view">View</string>
    <string name="msg_added_tofav">Added to Favorites</string>
    <string name="msg_no_restaurants">No Restaurants</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="err_not_implemented">Feature under construction</string>
    <string name="cart">Cart</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="fav">Favourites</string>
    <string name="not_available">Not Available</string>
    <string name="price">Price Range</string>
    <string name="availability">Availability</string>
    <string name="in_stock">In Stock</string>
    <string name="description">Description</string>
    <string name="restaurants">Restaurants</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="msg_cleared_tofav">Cleared favourites</string>
    <string name="fav_clear">Clear</string>
    <string name="fav_clear_selected">Delete Selected</string>
    <string name="err_login">Failed to Login</string>
    <string name="err_get_profile">Error retrieving consumer profile</string>
    <string name="action_logout">Logout</string>
    <string name="app_url_info">doordash.com</string>
    <string name="status">Status</string>
</resources>
